@@ -1,3 +1,4 @@
+ - add privilege service unit tests
  - add job service unit tests
  - replace local variable type declaration with var
  - spice up login filter unit tests
